--- a/.github/workflows/ci-exercicio.yml
+++ b/.github/workflows/ci-exercicio.yml
@@ -19,10 +19,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 18
         cache: 'npm'
-    - run: npm install
-    - run: npx cypress run
+    - name: instalar dependencias
+      run: npm install
+
+    - name: Executar testes
+      run: npm test
