--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Default Cypress Tests",
   "main": "index.js",
   "scripts": {
-    "test": "npx cypress run" 
+    "test": "npx cypress run --browser chrome" 
     
   },
   "keywords": [],
