--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "allure": "^3.2.0",
+    "commandline": "^0.0.2",
     "cypress": "^15.1.0"
   },
   "devDependencies": {
